# Polkadot-Rust-Bridge

./: .env.example  .gitignore  README.md  benchmark-results-testnet.json  benchmark-results.json  buidl.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/: RustBridge.sol  XCMRustBridge.sol
contracts/mocks/: MockPrecompile.sol
demo/: index.html  netlify.toml  package-lock.json  package.json
demo/src/: App.tsx  index.css
demo/src/data/: benchmark-results-local.json  benchmark-results-testnet.json  deployments.json
deployments/: testnet.json
docs/: architecture.md
precompiles/: Cargo.toml
precompiles/ink-bundle/: rust_bridge_ink.contract  rust_bridge_ink.json  rust_bridge_ink.wasm
precompiles/rust-bridge/: Cargo.toml
precompiles/rust-bridge/src/: abi.rs  lib.rs
precompiles/rust-bridge/src/handlers/: bls.rs  dot_product.rs  mod.rs  poseidon.rs
precompiles/rust_bridge_ink/: Cargo.toml  Makefile  rust-toolchain.toml
precompiles/rust_bridge_ink/src/: lib.rs
scripts/: benchmark-testnet.ts  benchmark.ts  deploy-ink.sh  deploy-ink.ts  deploy.ts
tests/: Benchmark.test.ts  RustBridge.test.ts  benchmark.ts
tests/helpers/: deployMocks.ts
